Project

General

Profile

Actions

Bug #20325

closed

Enumerator.product.size bug with zero * infinite enumerators

Bug #20325: Enumerator.product.size bug with zero * infinite enumerators

Added by marcandre (Marc-Andre Lafortune) over 2 years ago. Updated over 2 years ago.

Status:
Closed
Assignee:
-
Target version:
ruby -v:
ruby 3.3.0 (2023-12-25 revision 5124f9ac75) [arm64-darwin22]
[ruby-core:117056]

Description

Enumerator.product([], 1..).to_a # => [] (OK)
Enumerator.product([], 1..).size # => Infinity (Should be 0)
Actions

Also available in: PDF Atom