[Bug #20325] `Enumerator.product.size` is 0 if any size is 0